modules/gdscript/tests/scripts/analyzer/errors/object_index_int.gd
func test():
	var o: Object = null
	print(o[0])
